--- a/BWWalkthroughExample/Base.lproj/Main.storyboard
+++ b/BWWalkthroughExample/Base.lproj/Main.storyboard
@@ -3,8 +3,54 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="sfb-rb-xPl">
+            <objects>
+                <viewController id="qJY-qZ-UG0" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Zv-yx-d0O"/>
+                        <viewControllerLayoutGuide type="bottom" id="sdy-w4-OCc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WHc-Eu-R2Z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wmt-blank.png" translatesAutoresizingMaskIntoConstraints="NO" id="slv-eV-L0r">
+                                <rect key="frame" x="0.0" y="-65" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="leading" secondItem="WHc-Eu-R2Z" secondAttribute="leadingMargin" id="D9e-xj-HUZ"/>
+                            <constraint firstItem="sdy-w4-OCc" firstAttribute="top" secondItem="slv-eV-L0r" secondAttribute="bottom" id="GAJ-vD-BB6"/>
+                            <constraint firstItem="sdy-w4-OCc" firstAttribute="top" secondItem="slv-eV-L0r" secondAttribute="bottom" id="JJC-sT-LQP"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="leading" secondItem="WHc-Eu-R2Z" secondAttribute="leadingMargin" id="S8K-GV-gGk"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="leading" secondItem="WHc-Eu-R2Z" secondAttribute="leadingMargin" id="UAR-tq-RV9"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="top" secondItem="WHc-Eu-R2Z" secondAttribute="topMargin" constant="-7" id="WcT-NO-taX"/>
+                            <constraint firstItem="sdy-w4-OCc" firstAttribute="top" secondItem="slv-eV-L0r" secondAttribute="bottom" id="Xjk-u7-nAl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="slv-eV-L0r" secondAttribute="trailing" id="Xl3-Yf-R6D"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="leading" secondItem="WHc-Eu-R2Z" secondAttribute="leadingMargin" id="Yui-8N-DAO"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="top" secondItem="WHc-Eu-R2Z" secondAttribute="topMargin" constant="-7" id="c3h-Ec-c5g"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="slv-eV-L0r" secondAttribute="trailing" id="gRD-Ch-2uM"/>
+                            <constraint firstItem="sdy-w4-OCc" firstAttribute="top" secondItem="slv-eV-L0r" secondAttribute="bottom" id="iD2-Aj-bHV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="slv-eV-L0r" secondAttribute="trailing" id="mgS-sS-PSa"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="slv-eV-L0r" secondAttribute="trailing" id="nYh-fA-CmZ"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="top" secondItem="WHc-Eu-R2Z" secondAttribute="topMargin" constant="-7" id="pRC-az-CN5"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="leading" secondItem="WHc-Eu-R2Z" secondAttribute="leadingMargin" id="sQF-Ia-8VC"/>
+                            <constraint firstItem="sdy-w4-OCc" firstAttribute="top" secondItem="slv-eV-L0r" secondAttribute="bottom" id="vkI-xY-QAI"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="top" secondItem="WHc-Eu-R2Z" secondAttribute="topMargin" constant="-8" id="wOg-ez-tfM"/>
+                            <constraint firstItem="slv-eV-L0r" firstAttribute="top" secondItem="WHc-Eu-R2Z" secondAttribute="topMargin" id="y01-Dd-xSQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="slv-eV-L0r" secondAttribute="trailing" id="zd0-os-lmu"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R2O-Cm-gHy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1369" y="520"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="3VV-ti-g3f">
             <objects>
@@ -18,9 +64,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dvT-us-Gur">
-                                <rect key="frame" x="248" y="285" width="106" height="30"/>
+                                <rect key="frame" x="284" y="285" width="33" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Start Shopping">
+                                <state key="normal" title="Intro">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -28,10 +74,22 @@
                                     <action selector="showWalkthrough" destination="fuP-sH-rQA" eventType="touchUpInside" id="XY1-xt-lx8"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LKU-4f-QpS">
+                                <rect key="frame" x="233" y="340" width="134" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Start Shopping">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="qJY-qZ-UG0" kind="show" id="ib3-9K-xOl"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.45974587751959084" blue="0.3486001789467672" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="dvT-us-Gur" secondAttribute="centerY" id="6Fh-Bc-oj2"/>
+                            <constraint firstAttribute="centerX" secondItem="LKU-4f-QpS" secondAttribute="centerX" id="Mnz-75-Efx"/>
                             <constraint firstAttribute="centerX" secondItem="dvT-us-Gur" secondAttribute="centerX" constant="-0.5" id="dX9-Ox-Vbt"/>
                         </constraints>
                     </view>
@@ -41,4 +99,7 @@
             <point key="canvasLocation" x="657" y="499"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="wmt-blank.png" width="640" height="1136"/>
+    </resources>
 </document>
